--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -275,7 +275,7 @@ blockquote small {
 }
 
 
-#comments {
+.sidebar-right-blank {
     position: fixed;
     top: 0;
     right: 0;
@@ -288,43 +288,43 @@ blockquote small {
     display: block;
 }
 
-#comments .header {
+.sidebar-right-blank .header {
     padding-bottom: 14px;
     margin-bottom: 14px;
     border-bottom: 1px solid #ccc;
 }
 
-#comments .header > h3 {
+.sidebar-right-blank .header > h3 {
     margin-bottom: 0;
     margin-top: 0;
     text-align: center;
 }
 
-#comments .header > a {
+.sidebar-right-blank .header > a {
     position: absolute;
     top: 20px;
 }
 
-#comments .body {
+.sidebar-right-blank .body {
     overflow-y: scroll !important;
     height: calc(100% - 60px);
 }
 
-#comments .body > .panel {
+.sidebar-right-blank .body > .panel {
     margin-bottom: 7px;
 }
 
-#comments .body > .panel > .panel-heading {
+.sidebar-right-blank .body > .panel > .panel-heading {
     padding: 7px;
 }
 
-#comments .body > .panel > .panel-heading > h4 {
+.sidebar-right-blank .body > .panel > .panel-heading > h4 {
     margin: 0;
     padding: 0;
     font-size: 16px;
 }
 
-#comments .body > .panel > .panel-body {
+.sidebar-right-blank .body > .panel > .panel-body {
     padding: 7px;
     margin-bottom: 2px;
 }
