--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -12,7 +12,7 @@
 }
 
 .main-header .logo.dark-bg {
-    background-color: #36568e;
+    background-color: #f7f7f7;
 }
 
 .main-header .logo.dark-bg .img-responsive {
@@ -124,7 +124,6 @@ select.form-control {
 .profile #linkUploadAvatar > .cover:hover .overlay {
     opacity: 1;
 }
-
 
 /*
     Autentication
